[gd_scene load_steps=13 format=3 uid="uid://cmh45mjfe0xo7"]

[ext_resource type="Texture2D" uid="uid://c2r1d8vctybw2" path="res://GFX/HUD/lifes.png" id="1"]
[ext_resource type="Script" path="res://Menues/GameOver.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dnwwkh70wbkd8" path="res://GFX/Background/bg_layer4.png" id="3"]
[ext_resource type="FontFile" uid="uid://cglwcc7r2xid8" path="res://Fonts/candles_.ttf" id="4"]
[ext_resource type="Texture2D" uid="uid://cdyw7jvjqpjsd" path="res://GFX/Background/bg_layer3.png" id="5"]
[ext_resource type="Texture2D" uid="uid://cdjwhlh1l70oj" path="res://GFX/Background/bg_layer2.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bne1rmw7fi0bb" path="res://GFX/Background/bg_layer1.png" id="7"]

[sub_resource type="FontFile" id="1"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("4"), ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("4"), ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="2"]
texture = ExtResource("1")
region_rect = Rect2(0, 0, 52, 71)

[sub_resource type="FontFile" id="4"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("4"), ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="5"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("4"), ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="Background" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("7")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("6")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("5")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 129

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.313726, 0.662745, 0.141176, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.45098, 0.517647, 0.101961, 1)
theme_override_fonts/font = SubResource("1")
text = "Game Over"

[node name="HBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="try_again_row" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 44
alignment = 1

[node name="BunnyIcon" type="Sprite2D" parent="CenterContainer/VBoxContainer/HBoxContainer/try_again_row"]
visible = false
position = Vector2(144.697, 11.6068)
texture = ExtResource("1")

[node name="Try_Again" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/try_again_row"]
layout_mode = 2
theme_override_colors/font_color = Color(0.313726, 0.662745, 0.141176, 1)
theme_override_colors/font_pressed_color = Color(0.0745098, 0.415686, 0.466667, 1)
theme_override_colors/font_hover_color = Color(0.439216, 0.854902, 0.231373, 1)
theme_override_colors/font_disabled_color = Color(0.313726, 0.662745, 0.141176, 1)
theme_override_fonts/font = SubResource("3")
theme_override_styles/hover = SubResource("2")
text = "Try Again"
flat = true

[node name="BunnyIcon2" type="Sprite2D" parent="CenterContainer/VBoxContainer/HBoxContainer/try_again_row"]
visible = false
position = Vector2(427.901, 11.6067)
texture = ExtResource("1")

[node name="eng_game_row" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="End_Game" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/eng_game_row"]
layout_mode = 2
theme_override_colors/font_color = Color(0.313726, 0.662745, 0.141176, 1)
theme_override_colors/font_pressed_color = Color(0.0745098, 0.415686, 0.466667, 1)
theme_override_colors/font_hover_color = Color(0.439216, 0.854902, 0.231373, 1)
theme_override_colors/font_disabled_color = Color(0.313726, 0.662745, 0.141176, 1)
theme_override_fonts/font = SubResource("3")
theme_override_styles/hover = SubResource("2")
text = "End Game"
flat = true
expand_icon = true

[node name="Name" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_bottom = -5.0
theme_override_colors/font_color = Color(0.313726, 0.662745, 0.141176, 1)
theme_override_fonts/font = SubResource("4")
text = "Made by [pseudo]KeigA_at"

[node name="Version" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.36035
offset_right = -8.63965
offset_bottom = -5.0
theme_override_colors/font_color = Color(0.313726, 0.662745, 0.141176, 1)
theme_override_fonts/font = SubResource("5")
text = "Version 1.0"

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/HBoxContainer/try_again_row" to="." method="_on_try_again_row_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/try_again_row/Try_Again" to="." method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/eng_game_row/End_Game" to="." method="_on_EndGameButton_pressed"]
